projects/compiler/test/typechecker/indexing/string_error_idx_nullable.out
Error at %FILE_NAME%:3:5
Type mismatch
  |  str[i]
         ^
Expected: Int
but instead found: Int?
